# advent-of-code

./: .editorconfig  .flake8  .gitignore  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.c  23.py  24.c  24.py  25.py  README.md  aoc.py  meta.py  mkday  pyproject.toml  requirements.in  requirements.txt  run  scratch.py
.vim/: coc-settings.json
days/day1/: day1lib.py  part1.py  part2.py  test_part1.py  test_part2.py
days/day10/: day10lib.py  part1.py  part2.py  test_part1.py  test_part2.py
days/day11/: day11lib.py  part1.py  part2.py
days/day12/: day12lib.py  part1.hs  part1.py  part2.py  test_part1.py  test_part2.py
days/day13/: part1.py  part2.py
days/day14/: day14lib.py  part1.py  part2.py  test_part1.py
days/day15/: day15lib.py  part1.py  part2.py
days/day16/: day16lib.py  part1.py  part2.c  part2.py  test_part1.py  test_part2.py
days/day17/: day17lib.py  part1.py  part2.py  test_part1.py
days/day18/: part1.py  part2.py
days/day19/: part1.py  part2.py
days/day2/: part1.py  part2.py
days/day20/: part1.py  part2.py
days/day21/: part1.py  part2.py
days/day22/: part1.py  part2.c  part2.py
days/day23/: part1.py  part2.c  part2.py
days/day24/: part1.py  part2.py
days/day25/: part1.py
days/day3/: day3lib.py  part1.py  part2.py  test_part1.py  test_part2.py
days/day4/: day4lib.py  part1.py  part2.py  test_part1.py  test_part2.py
days/day5/: day5lib.py  part1.py  part2.py  test_part1.py
lib/: digits.py  input.py  intcode.py
(+16 files in other folders)
